--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
           <img src="./img/kazuki_and_naoki.jpg" alt="">
         </div>
         <div class="Position__basic__name1 Position__basic__name">
-          <p>なおきくん</p>
+          <p>なおきくん西山くん</p>
         </div>
         <div class="Position__basic__name2 Position__basic__name">
-          <p>かずきくん</p>
+          <p>かずきくん多田くん</p>
         </div>
       </div>
 
