--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
      <div class="answerRotate">
        <h2>問題サンプル③</h2>
        <p>display:flex 応用</p>
-       <div class="flex-container ponta">
+       <!-- <div class="flex-container ponta">
             <div class="left items">
             </div>.
             <div class="right ">
@@ -99,7 +99,7 @@
                  </div>
                  <div class="row items"></div>
             </div>
-       </div>
+       </div> -->
      </div>
    </div>
     <div id="container4">
@@ -114,11 +114,22 @@
         </div>
      </div>
       </div>
-
       <div class="answerRotate">
         <h2>問題サンプル③</h2>
         <p>animation 応用</p>
-        <div class="square"></div>
+          <div class="spinner"></div>
+          <div class="double-spinner">
+            <div></div>
+            <div></div>
+          </div>
+          <div class="rect-spinner">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
       </div>
       <div class="answerRotate2">
         <h2>問題サンプル③</h2>
@@ -136,5 +147,17 @@
        <p>position 応用</p>
      </div>
    </div>
+</div>
+<div id="container5">
+ <h2 class="thema">テーマ:hover</h2>
+ <div class="answer3d">
+   <h2>問題サンプル③</h2>
+   <p>hover基礎</p>
+ </div>
+ <div class="answerRotate">
+   <h2>問題サンプル③</h2>
+   <p>hover 応用</p>
+ </div>
+</div>
   </body>
 </html>
