--- a/sample.html
+++ b/sample.html
@@ -22,5 +22,8 @@
      <li>
           <a href="./3Dアニメーション/index.html">3Dアニメーション</a>
      </li>
+     <li>
+          <a href="./擬似要素/index.html">擬似要素</a>
+     </li>
 </body>
 </html>
