いろいろ編集

--- a/sample.html
+++ b/sample.html
@@ -17,10 +17,7 @@
           <a href="./position/index.html">position</a>
      </li>
      <li>
-          <a href="./animation/index.html">animation</a>
-     </li>
-     <li>
-          <a href="./3Dアニメーション/index.html">3Dアニメーション</a>
+          <a href="./変形/index.html">変形</a>
      </li>
 </body>
 </html>
