--- a/flex/index.html
+++ b/flex/index.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
-     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-     <div id="container4">
-          <h2 class="thema">テーマ:display:flex</h2>
-          <div class="answer3d">
-            <h2>問題サンプル③</h2>
-            <p>display:flex基礎</p>
-            <div class="pictures">
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="container4">
+      <h2 class="thema">テーマ:display:flex</h2>
+      <div class="answer3d">
+        <h2>問題サンプル③</h2>
+        <p>display:flex基礎</p>
+        <div class="container">
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+        </div>
+      </div>
+
+      <div class="answerRotate">
+        <h2>問題サンプル③</h2>
+        <p>display:flex 応用</p>
+        <div class="flex-container">
+          <div class="flex-element__left"></div>
+          <div class="flex-element__center">
+            <div></div>
+            <div></div>
+            <div></div>
           </div>
-      
-          <div class="answerRotate">
-            <h2>問題サンプル③</h2>
-            <p>display:flex 応用</p>
-            <div class="flex-container ponta">
-              <div class="left items">
-              </div>.
-              <div class="right ">
-                <div class="row items"></div>
-                <div class="row row-flex">
-                  <div class="row-left items">
-                  </div>
-                  <div class="row-right items"></div>
-                </div>
-                <div class="row items"></div>
-              </div>
+          <div class="flex-element__right">
+            <div class="flex-element__right-top">
+              <div></div>
+              <div></div>
+            </div>
+            <div class="flex-element__right-mid"></div>
+            <div class="flex-element__right-bottom">
+              <div></div>
+              <div></div>
+              <div></div>
             </div>
           </div>
         </div>
-</body>
+      </div>
+    </div>
+  </body>
 </html>
