--- a/hoverとtransition/hover.html
+++ b/hoverとtransition/hover.html
@@ -4,15 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../reset.css">
   <link rel="stylesheet" href="./hover.css">
+  <link rel="stylesheet" href="../sample.css">
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <a href="../sample.html"><img src="../img/accerelate.png" alt=""></a>
+    <nav>
+         <li class="here"><a href="../hoverとtransition/hover.html">hover</a></li>
+         <li><a href="../flex/index.html">flex</a></li>
+         <li><a href="../position/index.html">position</a></li>
+         <li><a href="../変形/index.html">transform</a></li>
+         <li><a href="../擬似要素/index.html">疑似要素</a></li>
+         <li><a href="../応用/index.html">応用</a></li>
+    </nav>
+</header>
   <div id="container">
-    <h2 class="thema">テーマ:transitionと疑似要素</h2>
+    <h2 class="thema">テーマ:hoverとtransition</h2>
     <div class="answer">
-      <h2>問題サンプル➀</h2>
       <p>transition 入門</p>
       <button class="btn float">ponta</button>
       <button class="btn filled">ponta</button>
@@ -21,12 +34,10 @@
       <button class="btn solid">ponta</button>
     </div>
     <div class="answer">
-      <h2>問題サンプル➀</h2>
       <p>transition + 疑似要素 基礎</p>
       <button class="btn slide-bg">ponta</button>
     </div>
     <div class="answer">
-      <h2>問題サンプル➀</h2>
       <p>transition + 疑似要素 応用</p>
       <button class="btn btn-white">ponta</button>
     </div>
