--- a/変形/index.html
+++ b/変形/index.html
@@ -12,32 +12,46 @@
   <head>
     <meta charset="utf-8">
     <title>タイトル</title>
-    <meta name="description" content="テキストテキストテキストテキストテキストテキスト">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../sample.css">
   </head>
 
   <body>
+     <header>
+          <a href="../sample.html"><img src="../img/accerelate.png" alt=""></a>
+          <nav>
+               <li><a href="../hoverとtransition/hover.html">hover</a></li>
+               <li><a href="../flex/index.html">flex</a></li>
+               <li><a href="../position/index.html">position</a></li>
+               <li class="here"><a href="../変形/index.html">transform</a></li>
+               <li><a href="../擬似要素/index.html">疑似要素</a></li>
+               <li><a href="../応用/index.html">応用</a></li>
+          </nav>
+     </header>
+     <div class="container">
     <div class="content">
       <div class="left">
         <div class="text-area">
           <h2 class="title">
-            <span class="en">DEVELOPMENT</span>
-            <span class="ja">都市開発</span>
+            <span class="en">PROGRAMMING</span>
+            <span class="ja">プログラミング</span>
           </h2>
           <p class="copy">
-            私たちは、明るい経済社会を実現するための都市・<br class="pc">
-            地域づくりという観点から未来に残していけるような<br class="pc">都市作りを行っていきます。
+            私たちは、POSSEというプログラミングコミュニティで<br class="pc">
+            人格とプログラミングの両輪で<br class="pc">日々活動を行っています。
           </p>
+          <img src="../img/POSSElogo.jpg" alt="" class="logo">
         </div>
       </div>
       <div class="right">
-        <img src="../img/やさぐれい.jpg" alt="">
+        <img src="../img/cycling.jpg" alt="">
       </div>
     </div>
+</div>
   </body>
 </html>
 </body>
