--- a/flex/index.html
+++ b/flex/index.html
@@ -5,18 +5,27 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
+     <link rel="stylesheet" href="../reset.css">
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="../sample.css">
 </head>
 <body>
-     <div id="container4">
+     <header>
+          <a href="../sample.html"><img src="../img/accerelate.png" alt=""></a>
+          <nav>
+               <li><a href="../hoverとtransition/hover.html">hover</a></li>
+               <li class="here"><a href="../flex/index.html">flex</a></li>
+               <li><a href="../position/index.html">position</a></li>
+               <li><a href="../変形/index.html">transform</a></li>
+               <li><a href="../擬似要素/index.html">疑似要素</a></li>
+               <li><a href="../応用/index.html">応用</a></li>
+          </nav>
+     </header>
+     <div id="container" class="container">
           <h2 class="thema">テーマ:display:flex</h2>
-          <div class="answer3d">
-            <h2>問題サンプル③</h2>
+          <div class="answer">
             <p>display:flex基礎</p>
             <div class="pictures">
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
               <div class="item"></div>
               <div class="item"></div>
               <div class="item"></div>
@@ -26,23 +35,28 @@
             </div>
           </div>
       
-          <div class="answerRotate">
-            <h2>問題サンプル③</h2>
-            <p>display:flex 応用</p>
-            <div class="flex-container ponta">
-              <div class="left items">
-              </div>.
-              <div class="right ">
-                <div class="row items"></div>
-                <div class="row row-flex">
-                  <div class="row-left items">
-                  </div>
-                  <div class="row-right items"></div>
-                </div>
-                <div class="row items"></div>
-              </div>
-            </div>
-          </div>
-        </div>
+          <div class="answer">
+               <p>display:flex 応用</p>
+               <div class="flex-container">
+                 <div class="flex-element__left"></div>
+                 <div class="flex-element__center">
+                   <div></div>
+                   <div></div>
+                   <div></div>
+                 </div>
+                 <div class="flex-element__right">
+                   <div class="flex-element__right-top">
+                     <div></div>
+                     <div></div>
+                   </div>
+                   <div class="flex-element__right-mid"></div>
+                   <div class="flex-element__right-bottom">
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                   </div>
+                 </div>
+               </div>
+             </div>
 </body>
 </html>
