--- a/position/index.html
+++ b/position/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="../reset.css">
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="../sample.css">
 </head>
 <body>
-     <div id="container5">
-          <h2 class="thema">テーマ:position</h2>
+     <header>
+          <a href="../sample.html"><img src="../img/accerelate.png" alt=""></a>
+          <nav>
+               <li><a href="../hoverとtransition/hover.html">hover</a></li>
+               <li><a href="../flex/index.html">flex</a></li>
+               <li class="here"><a href="../position/index.html">position</a></li>
+               <li><a href="../変形/index.html">transform</a></li>
+               <li><a href="../擬似要素/index.html">疑似要素</a></li>
+               <li><a href="../応用/index.html">応用</a></li>
+          </nav>
+     </header>
+     <div id="container">
           <!-- <div class="Position__basic">
             <h2>問題サンプル③</h2>
             <p>position基礎</p>
@@ -27,9 +41,7 @@
       
           </div> -->
       
-          <div class="answerPosition">
-            <h2>問題サンプル③</h2>
-            <p>position 応用</p>
+          <div class="answer">
             <div class="wrapper">
                  <div class="wrapperImg">
                       <h4 class="page-title">POSSE<span>Programming Community</span></h4>
