--- a/hoverとtransition/hover.html
+++ b/hoverとtransition/hover.html
@@ -18,7 +18,7 @@
          <li class="here"><a href="../hoverとtransition/hover.html">hover</a></li>
          <li><a href="../flex/index.html">flex</a></li>
          <li><a href="../position/index.html">position</a></li>
-         <li><a href="../変形/index.html">transform</a></li>
+         <li><a href="../transform/index.html">transform</a></li>
          <li><a href="../擬似要素/index.html">疑似要素</a></li>
          <li><a href="../応用/index.html">応用</a></li>
     </nav>
