--- a/sample.html
+++ b/sample.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>リンク</title>
-     <link rel="preconnect" href="https://fonts.gstatic.com">
-     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="reset.css">
-     <link rel="stylesheet" href="sample.css">
-</head>
-<body>
-     <header>
-          <a href="../sample.html"><img src="../img/accerelate.png" alt=""></a>
-          <nav>
-               <li><a href="./hoverとtransition/hover.html">hover</a></li>
-               <li><a href="./flex/index.html">flex</a></li>
-               <li><a href="./position/index.html">position</a></li>
-               <li><a href="./変形/index.html">transform</a></li>
-               <li><a href="./擬似要素/index.html">疑似要素</a></li>
-               <li><a href="./応用/index.html">応用</a></li>
-          </nav>
-     </header>
-     <div class="main">
-          <ul class="question-list">
-               <li>
-                    <a href="./hoverとtransition/hover.html">hover</a>
-               </li>
-               <li>
-                    <a href="./flex/index.html">display:flex</a>
-               </li>
-               <li>
-                    <a href="./position/index.html">position</a>
-               </li>
-               <li>
-                    <a href="./変形/index.html">transform</a>
-               </li>
-               <li>
-                    <a href="./擬似要素/index.html">擬似要素</a>
-               </li>
-               <li>
-                    <a href="./応用/index.html">応用</a>
-               </li>
-          </ul>
-     </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>リンク</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="sample.css" />
+  </head>
+  <body>
+    <header>
+      <a href="../sample.html"><img src="../img/accerelate.png" alt="" /></a>
+      <nav>
+        <li><a href="./hoverとtransition/hover.html">hover</a></li>
+        <li><a href="./flex/index.html">flex</a></li>
+        <li><a href="./position/index.html">position</a></li>
+        <li><a href="./transform/index.html">transform</a></li>
+        <li><a href="./擬似要素/index.html">疑似要素</a></li>
+        <li><a href="./応用/index.html">応用</a></li>
+      </nav>
+    </header>
+    <div class="main">
+      <ul class="question-list">
+        <li>
+          <a href="./hoverとtransition/hover.html">hover</a>
+        </li>
+        <li>
+          <a href="./flex/index.html">display:flex</a>
+        </li>
+        <li>
+          <a href="./position/index.html">position</a>
+        </li>
+        <li>
+          <a href="./transform/index.html">transform</a>
+        </li>
+        <li>
+          <a href="./擬似要素/index.html">擬似要素</a>
+        </li>
+        <li>
+          <a href="./応用/index.html">応用</a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
