--- a/擬似要素/index.html
+++ b/擬似要素/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../reset.css">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="../sample.css">
-  <title>擬似要素</title>
-</head>
-<body>
-  <header>
-    <a href="../sample.html"><img src="../img/accerelate.png" alt=""></a>
-    <nav>
-         <li><a href="../hoverとtransition/hover.html">hover</a></li>
-         <li><a href="../flex/index.html">flex</a></li>
-         <li><a href="../position/index.html">position</a></li>
-         <li><a href="../変形/index.html">transform</a></li>
-         <li class="here"><a href="../擬似要素/index.html">疑似要素</a></li>
-         <li><a href="../応用/index.html">応用</a></li>
-    </nav>
-</header>
-  <div id="container">
-    <h2 class="after">テーマ:擬似要素</h2>
-    <div class="content">
-      <h2 class="title">accerelate</h2>
-      <p class="text">
-        accerelateとは'加速'を表す英単語です。この新人ハッカソンを通して3期生にPOSSEライフを加速させていって欲しいという願いを込めています。
-      </p>
-      <div class="img">
-        <img src="../img/yakei.jpg" alt="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../sample.css" />
+    <title>擬似要素</title>
+  </head>
+  <body>
+    <header>
+      <a href="../sample.html"><img src="../img/accerelate.png" alt="" /></a>
+      <nav>
+        <li><a href="../hoverとtransition/hover.html">hover</a></li>
+        <li><a href="../flex/index.html">flex</a></li>
+        <li><a href="../position/index.html">position</a></li>
+        <li><a href="../transform/index.html">transform</a></li>
+        <li class="here"><a href="../擬似要素/index.html">疑似要素</a></li>
+        <li><a href="../応用/index.html">応用</a></li>
+      </nav>
+    </header>
+    <div id="container">
+      <h2 class="after">テーマ:擬似要素</h2>
+      <div class="content">
+        <h2 class="title">accerelate</h2>
+        <p class="text">
+          accerelateとは'加速'を表す英単語です。この新人ハッカソンを通して3期生にPOSSEライフを加速させていって欲しいという願いを込めています。
+        </p>
+        <div class="img">
+          <img src="../img/おのかん.jpg" alt="" />
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
