--- a/flex/index.html
+++ b/flex/index.html
@@ -16,7 +16,7 @@
                <li><a href="../hoverとtransition/hover.html">hover</a></li>
                <li class="here"><a href="../flex/index.html">flex</a></li>
                <li><a href="../position/index.html">position</a></li>
-               <li><a href="../変形/index.html">transform</a></li>
+               <li><a href="../transform/index.html">transform</a></li>
                <li><a href="../擬似要素/index.html">疑似要素</a></li>
                <li><a href="../応用/index.html">応用</a></li>
           </nav>
